examples/test/testpolicy1117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1117
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key36: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value22
          key26: value1
      podSelector:
        matchLabels:
          key0: value25
          key20: value40
          key40: value21
